Fix header whitespace

--- a/src/components/NavigationMenu/NavigationMenu.less
+++ b/src/components/NavigationMenu/NavigationMenu.less
@@ -37,7 +37,7 @@
     color: #444;
     font-family: 'Helvetica Neue', Helvetica, sans-serif;
     font-weight: 400;
-    margin: 45px 0px 30px 15px;
+    margin: 30px 0px 30px 15px;
   }
 
   &__content {
